--- a/doc/supercell.1
+++ b/doc/supercell.1
@@ -1,5 +1,5 @@
 '\" t
-.\" Manual page created with latex2man on Fri Aug 28 15:13:37 CEST 2015
+.\" Manual page created with latex2man on Tue Sep  1 10:12:26 CEST 2015
 .\" NOTE: This file is generated, DO NOT EDIT.
 .de Vb
 .ft CW
@@ -10,7 +10,7 @@
 
 .fi
 ..
-.TH "SUPERCELL" "1" "2015/04/03" "Scientific Tools " "Scientific Tools "
+.TH "SUPERCELL" "1" "2015/09/01" "Scientific Tools " "Scientific Tools "
 .SH NAME
 
 .PP
@@ -263,7 +263,7 @@ libraries to handle symmetry operations in input file. The algorithm, implemente
 .SH VERSION
 
 .PP
-Version: 0.1 of 2015/04/03\&.
+Version: 1.0 of 2015/09/01\&.
 .PP
 .SH LICENSE AND COPYRIGHT
 
@@ -286,14 +286,22 @@ may be found on my homepage
 .PP
 .SH AUTHOR
 
-Kirill Okhotnikov, e\-mail: \fBkirill.okhotnikov@gmail.com\fP
+.TP
+Kirill Okhotnikov
+e\-mail: \fBkirill.okhotnikov@gmail.com\fP
+.PP
+.TP
+Dr. Sylvian Cadars
+e\-mail: \fBsylvian.cadars@cnrs\-imn.fr\fP
 .br
-Sylvian Cadars, e\-mail: \fBsylvian.cadars@cnrs\-orleans.fr\fP
+Institut des Materiaux Jean Rouxel (IMN) \- UMR6502
 .br
-CEMHTI \- UPR3079 CNRS Site Haute Temperature 
+2 rue de la Houssiniere, BP32229
 .br
-1D avenue de la Recherche Scientifique 
+44322 Nantes cdx3, France
 .br
-45071 Orleans Cedex 2 France 
+Tel: +33 (0)2 40 37 39 34
+.br
+Fax: +33 (0)2 40 37 39 95 
 .PP
 .\" NOTE: This file is generated, DO NOT EDIT.
