--- a/doc/supercell_man.tex
+++ b/doc/supercell_man.tex
@@ -35,9 +35,9 @@
 
 \renewcommand{\File}[1]{\path{#1}}
 
-\setDate{2015/04/03}    %%%% must be manually set, if rcsinfo is not present
+\setDate{2015/09/01}    %%%% must be manually set, if rcsinfo is not present
 \setVersionWord{Version:}  %%% that's the default, no need to set it.
-\setVersion{0.1}
+\setVersion{1.0}
 
 \begin{document}
 \newcommand{\Dd}{-{}-}
@@ -224,11 +224,19 @@ Version: \Version\ of \Date.
 
 \section{Author}
 %%%%%%%%%%%%%%%%
-Kirill Okhotnikov, e-mail: \Email{kirill.okhotnikov@gmail.com} \\
-Sylvian Cadars, e-mail: \Email{sylvian.cadars@cnrs-orleans.fr} \\ 
-CEMHTI - UPR3079 CNRS Site Haute Temperature \\
-1D avenue de la Recherche Scientifique \\
-45071 Orleans Cedex 2 France
+\begin{description}
+\item[Kirill Okhotnikov]
+e-mail: \Email{kirill.okhotnikov@gmail.com}
+
+\item[Dr. Sylvian Cadars] 
+e-mail: \Email{sylvian.cadars@cnrs-imn.fr} \\
+Institut des Materiaux Jean Rouxel (IMN) - UMR6502\\
+2 rue de la Houssiniere, BP32229\\
+44322 Nantes cdx3, France\\
+Tel: +33 (0)2 40 37 39 34\\
+Fax: +33 (0)2 40 37 39 95
+\end{description}
+
 \noindent
 
 \LatexManEnd
